--- a/gb/20/5/27/n12139133.md
+++ b/gb/20/5/27/n12139133.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/q239/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/q239/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/q239/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/q239/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/q239/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/q239/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/q239/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/q239/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/q239/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/q239/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/q239/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/q239/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/q239/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/q239/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【十字路口】香港大三罢前夕 传中共制暴栽赃</h2>
-<a href="https://git.io/g"><img width="600" src="https://raw.githubusercontent.com/q239/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/q239/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://djwddd4nnr0na.cloudfront.net/F1tS6Bm9l"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>中共输出文字狱，YouTube买单？中共制造暴乱，嫁祸大三罢？反制国安法，川普动怒撤中港美商。（大纪元）
 </h6>
 <hr>
 	<p>【大纪元2020年05月27日讯】大家好，我是唐浩，今天都好吗？</p>
 <p>今天我们要跟大家来聊几个重点话题，包括了：</p>
 <p>话题一：香港大三罢前夕 传中共制造暴乱要栽赃<br />
-话题二：<ahref="https://github.com/q239/djy/blob/master/gb/tag/%E6%B8%AF%E7%89%88%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">港版国安法</a>扩权 美国扬言出资撤回企业<br />
-话题三：不得批“共匪”与“五毛” <ahref="https://github.com/q239/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%96%87%E5%AD%97%E7%8B%B1.md#1">中共文字狱</a>输出海外</p>
-<p><center><a src=""></a><a href="https://git.io/g"><img width="600" src="https://raw.githubusercontent.com/q239/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/q239/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/s4dtRBxEUus" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>马上来看第一个话题：</p>
+话题二：<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B8%AF%E7%89%88%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">港版国安法</a>扩权 美国警告出资撤回企业<br />
+话题三：不得批“共匪”与“五毛” <ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%96%87%E5%AD%97%E7%8B%B1.md#1">中共文字狱</a>输出海外</p>
+<p><center><a src=""></a><a href="https://djwddd4nnr0na.cloudfront.net/F1tS6Bm9l"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/s4dtRBxEUus" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center>马上来看第一个话题：</p>
 <h3>话题一：香港大三罢前夕 传中共制造暴乱要栽赃</h3>
 <p>大家知道，中共人大预计在5月28日通过香港版的国家安全法，要进一步收紧香港的自由、人权与法治。</p>
 <p>而香港市民也准备在27日发动新一轮的“大三罢”行动，也就是罢工、罢市、罢课，并且准备前往立法会进行集会，表达诉求。</p>
@@ -19,7 +19,7 @@
 <p>这项“红色动员令”还说，会安排交通接送参与的人员，而且强调已经跟警方沟通好了，一定不会抓自己人，要大家放心。</p>
 <p>动员令还强调，每个人可以收到8,000块现金，应该是港币，而且强调“不会像上次何议员（何君尧）那样收不到钱”。</p>
 <p>好，这项消息看起来，应该是北京方面想要发动暴乱，来嫁祸、栽赃给抗争者，制造社会恐惧，从而让海内外社会认为，香港真的有“暴乱”、“恐怖行为”以及“有外国势力介入”，会危害国家安全。</p>
-<p>紧接着，北京再与香港的红色媒体、红色政客们以及外围组织，来个里应外合，一起引导舆论带风向，就可以更顺理成章地推动“<ahref="https://github.com/q239/djy/blob/master/gb/tag/%E6%B8%AF%E7%89%88%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">港版国安法</a>”。</p>
+<p>紧接着，北京再与香港的红色媒体、红色政客们以及外围组织，来个里应外合，一起引导舆论带风向，就可以更顺理成章地推动“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B8%AF%E7%89%88%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">港版国安法</a>”。</p>
 <p>这项消息，我们在发稿之前并没有办法查证，而且当节目播出的时候，这场立法会的抗争行动可能已经落幕了，至于会不会真的发生消息里说的“暴乱栽赃”，我们也无法预测。</p>
 <p>不过，我们认为这个消息不管是真是假，都有必要公布出来，一方面是提醒香港的朋友们留意防范，避免被栽赃；另方面是因为，这种策略，是高度符合中共对人民的维稳战略以及社会斗争思路，所以不管是真是假，都有助于我们进一步看清中共的政治伎俩。</p>
 <p>但是，非常巧合的是，在2015年底上映的香港电影《十年》，里面有一段情节，正好是描述在2020年5月，中共中央想要加速推动“国安法”，从而找来警方与黑社会一起商量，安排一场暴乱行动，要制造社会恐慌，从而让“国安法”顺利通过。大家可以自己去找电影来看。</p>
@@ -28,13 +28,13 @@
 <p>同时，我们也顺道看另一个消息。港版国安法的话题，不但引发国际社会高度关注，就连在中国境内，也有一名视频播主勇敢地通过视频，公开表达对香港人的声援。</p>
 <p>中国视频播主：</p>
 <p>“他要把香港的人全部变成正式的韭菜，香港的人民也将受到防火墙的保护。</p>
-<p>不能让香港这个革命的火焰蔓延到大陆，那就完了。他们知道六四那天发生了什么事情，他们知道共匪曾经做过什么事情。他们也知道共匪现在和以后会做什么事情。有些人他们在抗争之前就已经写好了遗书。但是跟他们比，我只能躲在屏幕的后面打打嘴炮，连自己的名字都不敢往外说。</p>
-<p>每天一睁眼就压力山大，一闭眼压力更大，做梦被找去谈话。那个国保问我这个是不是你，我还说那个不是我，那个跟我长得像，但是心里面已经怕得要死。</p>
-<p>你可能觉得我好可怜。这跟那些在街上被香港警察打，被香港警察奸杀，脱光衣服然后丢到海里暴尸的那些人比，我这个根本就不算什么。我现在能做的只有发声。”</p>
+<p>“不能让香港这个革命的火焰蔓延到大陆，那就完了。他们知道‘六四’那天发生了什么事情，他们知道共匪曾经做过什么事情。他们也知道共匪现在和以后会做什么事情。有些人他们在抗争之前就已经写好了遗书。但是跟他们比，我只能躲在屏幕的后面打打嘴炮，连自己的名字都不敢往外说。</p>
+<p>“每天一睁眼就压力山大，一闭眼压力更大，做梦被找去谈话。那个国保问我这个是不是你，我还说那个不是我，那个跟我长得像，但是心里面已经怕得要死。</p>
+<p>“你可能觉得我好可怜。这跟那些在街上被香港警察打，被香港警察奸杀，脱光衣服然后丢到海里暴尸的那些人比，我这个根本就不算什么。我现在能做的只有发声。”</p>
 <p>好，我们佩服这位朋友的勇气，也请大家一起继续关注与声援香港。</p>
 <p>但是，我们也顺便要提醒一件事，就像上一集节目提到的，中共这次对香港大张旗鼓的“纵火”，目的之一是要“围魏救赵”，要分散国际社会的视线，转移各国对疫情的调查以及对中共的追究责任。</p>
 <p>现在看起来，确实起到一定的效果。这一点还请大家保持警觉。</p>
-<h3>话题二：港版国安法扩权 美国扬言出资撤回企业</h3>
+<h3>话题二：港版国安法扩权 美国警告出资撤回企业</h3>
 <p>港版国安法即将在28日通过，但根据路透社披露，港版国安法不但要在香港设立国安机构，而且还要设立“国家安全法庭”，禁止香港的外国籍法官审理国安的相关案件，只允许中国籍法官审理。</p>
 <p>很显然，如果真的禁止外国籍法官审理国安案件，等于是中共要操控或施压本国籍法官，来做出有利于北京立场的判决。</p>
 <p>因为如果是外籍法官审理，中共一旦施加压力或者“晓以大义”，明示或暗示法官应该怎么判决，不但是直接破坏香港的“司法独立”与法治，会引发外籍法官的不满与抵抗，还可能会闹到国际社会去，酿成更大风波。</p>
@@ -49,7 +49,7 @@
 <p>白宫首席经济顾问库德洛：“我要补充，这将给香港带来非常不利的金融影响。顺便说一句，我们欢迎在香港或者中国大陆的任何美国公司。我们将竭尽全力支付全部费用，并支付搬家费用，如果他们将供应链和生产线搬回美国。”</p>
 <p>我们可以看到，虽然美方还陷在疫情与经济的困局当中，但是美方为了香港问题，已经直接与中方强势交锋，甚至不惜出钱帮助中国与香港的美国企业搬回美国，来截断中国的产业供应链，断绝中方通过香港取得美方的技术产品。</p>
 <p>至于北京会不会因此投鼠忌器、有所顾忌？我们继续看下去。</p>
-<h3>话题三：不得批“共匪”与“五毛” <ahref="https://github.com/q239/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%96%87%E5%AD%97%E7%8B%B1.md#1">中共文字狱</a>输出海外</h3>
+<h3>话题三：不得批“共匪”与“五毛” <ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%96%87%E5%AD%97%E7%8B%B1.md#1">中共文字狱</a>输出海外</h3>
 <p>可能大家都听说了，最近YouTube会自动审查网友的留言，只要留言里头有“共匪”的字样，这条留言会在短时间内，大约是15秒，就被系统自动删除。我们也实际测试过，这是真的。</p>
 <p>这两天，又传出YouTube不但会审查“共匪”这个词，就连“五毛”也一样，只要留言里出现“五毛”，留言也会在15秒左右，就被自动删除。</p>
 <p>而且，就连批评五毛的言论，也会被系统自动删除。</p>
@@ -96,36 +96,35 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/1/n12074348.md#1">【十字路口】中共暗阻川普连任 蔡政府退订红媒</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/5/n12083374.md#1">【十字路口】美领军索赔 万亿关税警告中共</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/6/n12086271.md#1">【十字路口】战狼四处出击 曝中共9大基因</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/15/n12110809.md#1">【十字路口】美中要全面脱钩 中国五大经济警讯</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/1/n12074348.md#1">【十字路口】中共暗阻川普连任 蔡政府退订红媒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/5/n12083374.md#1">【十字路口】美领军索赔 万亿关税警告中共</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/6/n12086271.md#1">【十字路口】战狼四处出击 曝中共9大基因</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/15/n12110809.md#1">【十字路口】美中要全面脱钩 中国五大经济警讯</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10283458.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(上)</a></li><li><a href="https://github.com/q239/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/30/n4283873.md#1" target="_blank">方林达：法轮功参与政治了吗？</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217581.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/20/n10921963.md#1" target="_blank">福国利民 2018年法轮功所获各类褒奖</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/25/n12134669.md#1">山东福建出现H9N2 台疾管署订旅游2级警示</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/25/n12135591.md#1">三名中国商人在赞比亚遇害 场面残忍</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/25/n12135738.md#1">唐绮阳预测下半年运势：选边站不容模糊以对</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/25/n12136200.md#1">美中脱钩和对抗全面展开 五大战场激烈交锋</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/25/n12135580.md#1">【一线采访】上海银来暴雷 受害人血本无归</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/26/n12136657.md#1">影帝吴朋奉在家倒地猝逝 享年55岁</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/23/n12131774.md#1">黄耀明与艺文界数百人联署 抵制港版国安法</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/26/n12138527.md#1">崔永元晒视频杠上胡锡进：千颗核弹头放你家</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/24/n12133574.md#1">无惧遭清算 何韵诗：未来不会离开香港</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/24/n12133047.md#1">【纪元播报】历史上瘟疫：神农尝百草的秘密</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/21/n12127421.md#1">南朝人误入山洞 遇到汉代的道家隐士河上公</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/20/n12123948.md#1">在瘟疫中救人的神仙</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/9/9/27/n2670522.md#1">古代教育：儒雅的大明朝文人（上）</a></li>
-<li><a href="https://github.com/q239/djy/blob/master/gb/20/5/24/n12133114.md#1">开元三大士之一 到东土大唐传道的印度高僧</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/q239/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/q239/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/27/n12139133.htm">【十字路口】香港大三罢前夕 传中共制暴栽赃</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/27/n12139133.htm">【十字路口】香港大三罢前夕 传中共制暴栽赃</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/q239/djy/blob/master/gb/20/5/27/n12139133.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/q239/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/q239/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/q239/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/q239/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/q239/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/q239/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/q239/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/q239/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/q239/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/q239/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/q239/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/q239/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/q239/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/q239/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/q239/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/q239/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/q239/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/q239/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/q239/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/q239/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12139133.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
